@@ -10,9 +10,7 @@
 (gnc:depend "report/account-summary.scm")
 (gnc:depend "report/average-balance.scm")
 (gnc:depend "report/balance-sheet.scm")
-(gnc:depend "report/income-expense-graph.scm")
 (gnc:depend "report/account-piecharts.scm")
-(gnc:depend "report/net-worth-timeseries.scm")
 (gnc:depend "report/category-barchart.scm")
 (gnc:depend "report/pnl.scm")
 (gnc:depend "report/hello-world.scm")
